--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -354,6 +354,8 @@
   <li ><a href="https://base64.us/" target="_blank">Bose</a></li>
   <li><a href="https://www.free-codecs.com" target="_blank">codecs</a></li>
   <li><a href="https://winworldpc.com/" target="_blank">winworld</a></li>
+  <li><a href="https://hellowindows.cn/" target="_blank">hellowindows</a></li>
+  <li><a href="https://msdn.itellyou.cn/" target="_blank">MSDN</a></li>
 </ol>
   <h3>矢量图标库</h3>
 <ol>
