--- a/cd.html
+++ b/cd.html
@@ -99,6 +99,9 @@
         <a href="https://neon.kde.org/" target="_blank">kde</a>
         <a href="https://getsol.us/" target="_blank">solus</a>
         <a href="https://www.kali.org/" target="_blank">kail</a>
+        <a href="https://www.qubes-os.org/" target="_blank">qubes</a>
+        <a href="https://tails.boum.org/" target="_blank">tails</a>
+        <a href="https://www.digi77.com/linux-kodachi/" target="_blank">Kodachi</a>
     </div>
     <div id="quickly">
         <select class="a4" id="test">
