--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -303,6 +303,7 @@
   <li><a href="https://subs.dog/" target="_blank">subdog</a></li>
   <li><a href="https://ibit.to/" target="_blank">ibit</a></li>
   <li><a href="https://btmirror.neocities.org/" target="_blank">btmirror</a></li>
+  <li><a href="https://www.mini4k.com/" target="_blank">mini4k</a></li>
 </ol> 
  <h3>小工具与资源</h3>
 <ol>  
