--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -333,6 +333,7 @@
   <li><a href="https://color.adobe.com/zh/create" target="_blank">adobe color</a></li>
   <li><a href="https://www.hellofont.cn/" target="_blank">字由</a></li>
   <li><a href="https://www.dafont.com/" target="_blank">dafont</a></li>
+  <li><a href="https://zh.sa1lib.org" target="_blank">zlibrary</a></li>
   <li><a href="" target="_blank"></a></li><br>
   <button type="button" class="s4" color=white><a href="https://www.avast.com/zh-cn"
     target="_blank">avast</a></button>
