--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -51,11 +51,11 @@
  <li><a href="https://pan.xunlei.com" target="_blank">迅雷网盘</a></li>
  <li><a href="https://cowtransfer.com/" target="_blank">奶牛快传</a></li>
  <li><a href="https://www.wenshushu.cn/" target="_blank">文叔叔</a></li>
- <li><a href="https://send.firefox.com" target="_blank">Firefox Send</a></li>
+ <li><a href="https://123pan.com" target="_blank">123盘</a></li>
  <li><a href="https://cloud.189.cn/" target="_blank">天翼云盘</a></li>
  <li><a href="https://yun.139.com/" target="_blank">和彩云</a></li>
  <li><a href="https://www.aliyundrive.com/drive" target="_blank">阿里云盘</a></li>
- <li><a href="https://www.teambition.com/pan" target="_blank">teambition盘</a></li>
+ <li><a href="https://pan.quark.cn/" target="_blank">夸克盘</a></li>
  <li><a href="https://cdimage-download.chinauos.com/" target="_blank">uos</a></li><br>
  <li><a href="https://send-anywhere.com/" target="_blank">sendAnywhere</a></li>
  <li><a href="https://www.file.io/" target="_blank">fileio</a></li>
@@ -159,6 +159,8 @@
   <li><a href="https://ifenpaidy.com/" target="_blank">分派电影</a></li>
   <li><a href="http://n7f6.cn/" target="_blank">凤凰电影</a></li>
   <li><a href="http://www.diandp.com/" target="_blank">电灯泡</a></li>
+  <li><a href="https://www.omofun.com/" target="_blank">omofun</a></li>
+  <li><a href="https://www.dmxq.fun/" target="_blank">动漫星球</a></li>
 </ol>
 <h3>聚合</h3>
 <ol>
@@ -323,10 +325,11 @@
   <li><a href="https://www.jijidown.com/" target="_blank">唧唧</a></li>
   <li><a href="http://www.kgbook.com/" target="_blank">苦瓜书盘</a></li>
   <li><a href="https://yun.hei521.cn/" target="_blank">天翼云分享</a></li>
-  <li><a href="https://bthub8.xyz/cn" target="_blank">bthub</a></li>
+  <li><a href="https://alixiaozhan.net/" target="_blank">阿里小站</a></li>
+  <li><a href="https://bthub8.xyz/cn" target="_blank">bthub</a></li><br>
   <li><a href="https://wunderstock.com/" target="_blank">wunderstock</a></li>
   <li><a href="https://unsplash.com/" target="_blank">unsplash</a></li>
-  <li><a href="https://www.hituyu.com/" target="_blank">图鱼</a></li><br>
+  <li><a href="https://www.hituyu.com/" target="_blank">图鱼</a></li>
   <li><a href="https://www.lanrentuku.com/" target="_blank">懒人图库</a></li>
   <li><a href="https://www.freepik.com/" target="_blank">freepik</a></li>
   <li><a href="https://coolors.co/" target="_blank">coolors</a></li>
