--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -91,7 +91,7 @@
  </ol>
  <h3>影视与字幕</h3>
 <ol>
-  <li><a href="https://www.aixiaoju.com/" target="_blank">爱笑聚</a></li>   
+  <li><a href="https://www.axjbt.com/" target="_blank">爱笑聚</a></li>   
   <li><a href="http://flvweb.com/" target="_blank">flvweb</a></li>
   <li><a href="https://www.duboku.co/" target="_blank">独播库</a></li>      
   <li><a href="http://www.meijuniao.com" target="_blank">美剧鸟</a></li>
