--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -161,6 +161,9 @@
   <li><a href="http://www.diandp.com/" target="_blank">电灯泡</a></li>
   <li><a href="https://www.omofun.com/" target="_blank">omofun</a></li>
   <li><a href="https://www.dmxq.fun/" target="_blank">动漫星球</a></li>
+  <li><a href="https://aidi.tv/" target="_blank">爱迪影视</a></li>
+  <li><a href="https://www.mudvod.tv/" target="_blank">泥巴影院</a></li>
+  <li><a href="https://www.4kvm.com/" target="_blank">4k影视</a></li>
 </ol>
 <h3>聚合</h3>
 <ol>
