--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -227,7 +227,7 @@
   <li><a href="http://fastgit.org/" target="_blank">fastgit</a></li>
   <li><a href="http://tool.yijingying.com/" target="_blank">Healer的工具箱</a></li>
   <li><a href="https://tools.sixyin.com/" target="_blank">六音工具箱</a></li>
-  <li><a href="https://www.sixyin.com/" target="_blank">六音软件</a></li> 
+  <li><a href="https://www.6yit.com/" target="_blank">六音软件</a></li> 
   <li><a href="https://www.ghxi.com/" target="_blank">果核剥壳</a></li> 
   <li><a href="https://www.yijingying.com/" target="_blank">前线乐园</a></li>
   <li><a href="https://iao.su/" target="_blank">不死鸟</a></li>  
