--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -224,12 +224,12 @@
 </ol>
   <h3>软件网</h3>
 <ol>
-  <li><a href="http://fastgit.org/" target="_blank">fastgit</a></li>
-  <li><a href="http://tool.yijingying.com/" target="_blank">Healer的工具箱</a></li>
+  <li><a href="https://423down.com/" target="_blank">423down</a></li>
+  <li><a href="https://www.appinn.com/" target="_blank">小众软件</a></li>
   <li><a href="https://tools.sixyin.com/" target="_blank">六音工具箱</a></li>
   <li><a href="https://www.6yit.com/" target="_blank">六音软件</a></li> 
   <li><a href="https://www.ghxi.com/" target="_blank">果核剥壳</a></li> 
-  <li><a href="https://www.yijingying.com/" target="_blank">前线乐园</a></li>
+  <li><a href="https://www.whg6.com/" target="_blank">前线乐园</a></li>
   <li><a href="https://iao.su/" target="_blank">不死鸟</a></li>  
   <li><a href="https://atuo.store/" target="_blank">Atuo</a></li>
   <li><a href="https://getitfree.cn/" target="_blank">正版中国</a></li>
