--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -103,11 +103,11 @@
   <li><a href="https://enlienli.com/" target="_blank">嗯哩嗯哩</a></li>
   <li><a href="https://www.uump4.net" target="_blank">uump4</a></li>
   <li><a href="https://bangumi.moe/" target="_blank">萌番组</a></li><br>
-  <li><a href="https://yanetflix.com/" target="_blank">鸭奈飞</a></li>
+  <li><a href="https://btbtt11.com/" target="_blank">鸭奈飞</a></li>
   <li><a href="https://88btbtt.com/" target="_blank">BT之家</a></li>
   <li><a href="http://zmk.pw/" target="_blank">字幕库</a></li>
   <li><a href="https://subhd.com/" target="_blank">subhd</a></li>
-  <li><a href="https://www.pianku.li/" target="_blank">片库</a></li>
+  <li><a href="https://www.pkmp4.com/" target="_blank">片库</a></li>
   <li><a href="https://www.y3600.cc/" target="_blank">热播韩剧</a></li>
   <li><a href="https://www.hanfan.cc/" target="_blank">韩饭</a></li>
   <li><a href="https://www.hanjutv.com/" target="_blank">韩剧tv</a></li>
@@ -291,7 +291,8 @@
   <li><a href="https://linuxtracker.org/" target="_blank">linuxtracker</a></li>
   <li><a href="https://www.gtdb.to/" target="_blank">gtdb</a></li>
   <li><a href="http://bt.etree.org/" target="_blank">etree</a></li>
-  <li><a href="https://www.cine-calidad.com/" target="_blank">cine-calided</a></li><br>
+  <li><a href="https://www.cine-calidad.com/" target="_blank">cine-calided</a></li>
+  <li><a href="https://zooqle.com/" target="_blank">zooqle</a></li><br>
   <li><a href="https://darklibria.it/" target="_blank">darklibria</a></li>
   <li><a href="https://elitetorrent.com/" target="_blank">elite</a></li>
   <li><a href="https://ilcorsaronero.link/" target="_blank">ICN</a></li>
