--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -103,8 +103,8 @@
   <li><a href="https://enlienli.com/" target="_blank">嗯哩嗯哩</a></li>
   <li><a href="https://www.uump4.net" target="_blank">uump4</a></li>
   <li><a href="https://bangumi.moe/" target="_blank">萌番组</a></li><br>
-  <li><a href="https://btbtt11.com/" target="_blank">鸭奈飞</a></li>
-  <li><a href="https://88btbtt.com/" target="_blank">BT之家</a></li>
+  <li><a href="https://yanetflix.com/" target="_blank">鸭奈飞</a></li>
+  <li><a href="https://btbtt11.com/" target="_blank">BT之家</a></li>
   <li><a href="http://zmk.pw/" target="_blank">字幕库</a></li>
   <li><a href="https://subhd.com/" target="_blank">subhd</a></li>
   <li><a href="https://www.pkmp4.com/" target="_blank">片库</a></li>
