--- a/cd.html
+++ b/cd.html
@@ -26,14 +26,14 @@
         <h1>中国</h1>
         <a href="https://mirrors.huaweicloud.com/" target="_blank"><img src="https://res.devcloud.huaweicloud.com/obsdevui/mirror/8.4.6.013/huawei-logo.ccfada81859294e36b70.png" alt="png"></a>
         <a href="https://developer.aliyun.com/mirror/" target="_blank"><img src="https://img.alicdn.com/tfs/TB13DzOjXP7gK0jSZFjXXc5aXXa-212-48.png" alt="png" width="80px" height="20px"></a>
-        <a href="https://npm.taobao.org/mirrors/" target="_blank"><img src="https://npm.taobao.org/favicon.ico" alt="ico" width="25px" height="25px">淘宝</a>
+        <a href="https://npmmirror.com/" target="_blank"><img src="https://npmmirror.com/favicon.png" alt="png" width="25px" height="25px">淘宝</a>
         <a href="http://mirrors.163.com/" target="_blank"><img src="http://mirrors.163.com/.media/favicon.ico" alt="ico" width="25px" height="25px">网易云</a>
         <a href="http://mirrors.sohu.com/" target="_blank">搜狐</a>
         <a href="https://mirrors.cloud.tencent.com/" target="_blank"><img src="http://cloudcache.tencent-cloud.com/open_proj/proj_qcloud_v2/gateway/shareicons/cloud.png" alt="png" width="40px" height="25px">腾讯云</a>
         <a href="https://mirrors.pinganyun.com/" target="_blank"><img src="https://mirrors.pinganyun.com/img/logo.svg" alt="svg"></a>
         <a href="https://mirrors.tuna.tsinghua.edu.cn/" target="_blank"><img src="https://mirrors.tuna.tsinghua.edu.cn/static/img/logo-small@2x.png" alt="png" width="32px" height="25px">清华大学</a>
         <a href="https://mirrors.pku.edu.cn/" target="_blank"><img src="https://mirrors.pku.edu.cn/static/logo.png" alt="png" width="30px" height="30px">北京大学</a>
-        <a href="http://mirrors.neusoft.edu.cn/" target="_blank"><img src="http://mirrors.neusoft.edu.cn/logo.svg" alt="svg" width="30px" height="20px">东软信息学院</a>
+        <a href="http://mirrors.neusoft.edu.cn/" target="_blank">东软信息学院</a>
         <a href="https://mirrors.bfsu.edu.cn/" target="_blank"><img src="https://mirrors.tuna.tsinghua.edu.cn/static/img/logo-small@2x.png" alt="png" width="32px" height="25px">北京外国语大学</a>
         <a href="https://mirrors.ustc.edu.cn/" target="_blank"><img src="https://mirrors.ustc.edu.cn/ustclug/logo-origin.png" alt="png" width="30px" height="30px"/>中国科学技术大学</a><br>
         <a href="https://mirrors.zju.edu.cn/" target="_blank">浙江大学</a>
@@ -47,7 +47,6 @@
         <a href="https://mirrors.dgut.edu.cn/" target="_blank"><img src="https://mirrors.dgut.edu.cn/assets/logo.png" alt="png" width="30px" height="20px">东莞理工学院</a>
         <a href="http://mirrors.nju.edu.cn/" target="_blank"><img src="http://mirrors.nju.edu.cn/.theme/images/favicon.ico" alt="ico" width="30px" height="30px">南京大学</a><br>
         <a href="http://mirrors.njupt.edu.cn/" target="_blank"><img src="http://mirrors.njupt.edu.cn/static/img/favicon.png" alt="png" width="30px" height="30px">南京邮电大学</a>
-        <a href="http://mirror.hust.edu.cn/" target="_blank"><img src="http://mirror.hust.edu.cn/favicon.ico" alt="ico" width="30px" height="30px">华中科技大学</a>
         <a href="http://mirror.neu.edu.cn/" target="_blank">东北大学</a>
         <a href="https://linux.xidian.edu.cn/mirrors/" target="_blank"><img src="https://linux.xidian.edu.cn/favicon.png" alt="png" width="32px" height="32px">西电</a>
         <a href="https://mirrors.sustech.edu.cn/" target="_blank"><img src="https://mirrors.sustech.edu.cn/mirrors-logo.svg" alt="svg" width="30px" height="40px">南方科大</a>
