--- a/fm.html
+++ b/fm.html
@@ -122,7 +122,7 @@
         <a href=" https://bowuzhi.fm" target="_blank" id="guanfan"><img src="https://i.typlog.com/bowuzhi/8399831017_563724.jpg" alt="jpg" width="60px" height="60px" name="博物志" /></a>
         <a href="https://pushbar.fireside.fm/" target="_blank" id="guanfan"><img src="https://assets.fireside.fm/file/fireside-images/podcasts/images/5/566d4ead-9668-4261-b057-36a842b31886/cover_small.jpg" alt="jpg" width="60px" height="60px" name="push bar 不是吧" /></a>
         <a href="https://anobody.im" target="_blank" id="guanfan"><img src="https://static.anobody.im/images/banner.png" alt="png" width="50px" height="50px" name="小人物" /></a><br>
-        <a href=" https://zhuchangsile.xyz" target="_blank" id="guanfan"><img src="https://i.typlog.com/zhuchangsile/8427143829_473563.png" alt="png" width="60px" height="60px" name="主唱死了" /></a>
+        <a href=" https://zhuchangsile.xyz" target="_blank" id="guanfan"><img src="https://i.typlog.com/zhuchangsile/8362153573_509449.png" alt="png" width="60px" height="60px" name="主唱死了" /></a>
         <a href="https://pan.icu/" target="_blank" id="guanfan"><img src="https://pan.icu/assets/banner.panicu.svg" alt="svg" width="50px" height="20px" name="内核恐慌" /></a>
         <a href="https://teahour.fm/" target="_blank" id="guanfan"><img src="https://assets.fireside.fm/file/fireside-images/podcasts/images/6/635ad9f1-6ce0-4f31-84cf-030e0c949169/header.jpg" alt="jpg" width="60px" height="60px" name="teahour" /></a>
         <a href="https://reread.typlog.io/" target="_blank" id="guanfan"><img src="https://i.typlog.com/reread/8384120029_54405.jpg" alt="jpg" width="60px" height="60px" name="一派·再读" /></a>
@@ -133,7 +133,7 @@
     <canvas width="800" height="400" id="canvas"></canvas>
     <div class="fm-app">
         <a href="https://www.tingpiting.com/" target="_blank"><img src="https://ali.static.yximgs.com/udata/pkg/phenix/piting-logo-new.455ca83c.ico" alt="ico" width="40px" height="40px"/></a>
-        <a href="https://novelfm.changdunovel.com/" target="_blank"><img src="https://p1.pstatp.com/origin/pgc-image/cfee40c82bf5415c84c9404c0f191239" alt="ico" width="40px" height="40px"/></a>
+        <a href="https://novelfm.changdunovel.com/" target="_blank"><img src="https://p1.toutiaoimg.com/origin/pgc-image/cfee40c82bf5415c84c9404c0f191239" alt="ico" width="40px" height="40px"/></a>
         <a href="https://www.xiaoyuzhoufm.com/" target="_blank"><img src="https://www.xiaoyuzhoufm.com/favicon.ico" alt="ico"/></a>
         <a href="https://www.kuwo.cn/downtingshu?from=tingshu" target="_blank"><img src="https://h5static.kuwo.cn/www/kw-www/img/pic_logo.f640b0c.png" alt="png" width="120px" height="50px"/></a>
         <a href="https://www.tingdao.com/" target="_blank"><img src="https://www.tingdao.com/logo.ico" alt="ico" width="30px" height="30px"></a>
