--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -305,7 +305,7 @@
   <li><a href="https://www.btmulu.com/" target="_blank">btmulu</a></li><br>
   <li><a href="https://www.ettvcentral.com/" target="_blank">etta</a></li>
   <li><a href="https://u3c3.com/" target="_blank">u3c3</a></li> 
-  <li><a href="https://nyaa.biz/" target="_blank">nyaa</a></li>
+  <li><a href="https://nyaa.si/" target="_blank">nyaa</a></li>
   <li><a href="https://subs.dog/" target="_blank">subdog</a></li>
   <li><a href="https://ibit.to/" target="_blank">ibit</a></li>
   <li><a href="https://btmirror.neocities.org/" target="_blank">btmirror</a></li>
@@ -357,7 +357,7 @@
 <ol>
   <li ><a href="https://www.iamwawa.cn" target="_blank">蛙蛙工具</a></li>
   <li ><a href="https://tool.lu" target="_blank">在线工具</a></li>
-  <li><a href="https://miku.tools" target="_blank">工具合辑网</a></li>
+  <li><a href="https://tb.rg-adguard.net/public.php" target="_blank">WZT</a></li>
   <li ><a href="http://www.gjw123.com/" target="_blank">工具123网</a></li>
   <li ><a href="https://www.tool2.cn/" target="_blank">兔二工具</a></li>
   <li ><a href="https://base64.us/" target="_blank">Bose</a></li>
