--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -310,6 +310,8 @@
   <li><a href="https://ibit.to/" target="_blank">ibit</a></li>
   <li><a href="https://btmirror.neocities.org/" target="_blank">btmirror</a></li>
   <li><a href="https://www.mini4k.com/" target="_blank">mini4k</a></li>
+  <li><a href="https://www.torrentdia15.com/" target="_blank">tdia15</a></li>
+  <li><a href="https://nnmclub.to/" target="_blank">NNM-Club</a></li>
 </ol> 
  <h3>小工具与资源</h3>
 <ol>  
