--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -112,7 +112,7 @@
   <li><a href="https://www.hanfan.cc/" target="_blank">韩饭</a></li>
   <li><a href="https://www.hanjutv.com/" target="_blank">韩剧tv</a></li>
   <li><a href="https://www.mp4er.cc/" target="_blank">哔嘀影视</a></li>
-  <li><a href="https://www.bd-film.cc/" target="_blank">BD影视</a></li>
+  <li><a href="https://www.bd2020.com/" target="_blank">BD影视</a></li>
   <li><a href="http://mcar.co/forum.php" target="_blank">耐卡影音</a></li>
   <li><a href="http://www.fanxinzhui.com/" target="_blank">追新番</a></li><br>
   <li><a href="http://pianyuan.org/" target="_blank">片源网</a></li>
