--- a/cd.html
+++ b/cd.html
@@ -24,7 +24,7 @@
     <div class="a1"><img src="image/cd.png" alt="png" width="100px" height="100px"></div>
     <div class="a2">
         <h1>中国</h1>
-        <a href="https://mirrors.huaweicloud.com/" target="_blank"><img src="https://res.devcloud.huaweicloud.com/obsdevui/mirror/8.4.6.013/huawei-logo.ccfada81859294e36b70.png" alt="png"></a>
+        <a href="https://mirrors.huaweicloud.com/" target="_blank"><img src="https://devcloud-res.hc-cdn.com/MirrorPortal-CDN/1.0.3/hws/app/assets/img/logo.svg" alt="svg"></a>
         <a href="https://developer.aliyun.com/mirror/" target="_blank"><img src="https://img.alicdn.com/tfs/TB13DzOjXP7gK0jSZFjXXc5aXXa-212-48.png" alt="png" width="80px" height="20px"></a>
         <a href="https://npmmirror.com/" target="_blank"><img src="https://npmmirror.com/favicon.png" alt="png" width="25px" height="25px">淘宝</a>
         <a href="http://mirrors.163.com/" target="_blank"><img src="http://mirrors.163.com/.media/favicon.ico" alt="ico" width="25px" height="25px">网易云</a>
@@ -53,6 +53,7 @@
         <a href="https://mirrors.tongji.edu.cn/" target="_blank">同济大学</a>
         <a href="https://mirrors.sdu.edu.cn/" target="_blank"><img src="https://mirrors.sdu.edu.cn/favicon.ico" alt="ico" width="30px" height="30px">山东大学</a>
         <a href="https://mirrors.ynu.edu.cn/index/" target="_blank">云南大学</a>
+        <a href="https://mirror.nyist.edu.cn/" target="_blank"><img src="https://mirror.nyist.edu.cn/static/img/logo.svg" alt="svg" width="30px" height="30px">南阳理工</a>
         <a href="https://mirrors.xjtu.edu.cn/" target="_blank">西交大</a>
         <h2>台湾</h2>
         <a href="http://ftp.tku.edu.tw/" target="_blank">淡江大学</a>
