--- a/cd.html
+++ b/cd.html
@@ -55,6 +55,7 @@
         <a href="https://mirrors.ynu.edu.cn/index/" target="_blank">云南大学</a>
         <a href="https://mirror.nyist.edu.cn/" target="_blank"><img src="https://mirror.nyist.edu.cn/static/img/logo.svg" alt="svg" width="30px" height="30px">南阳理工</a>
         <a href="https://mirrors.xjtu.edu.cn/" target="_blank">西交大</a>
+        <a href="https://mirrors.quickso.cn/" target="_blank">快点搜索站</a>
         <h2>台湾</h2>
         <a href="http://ftp.tku.edu.tw/" target="_blank">淡江大学</a>
         <a href="http://ftp.ncnu.edu.tw/" target="_blank">台南科技大学</a>
