--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -92,9 +92,9 @@
  <h3>影视与字幕</h3>
 <ol>
   <li><a href="https://www.axjbt.com/" target="_blank">爱笑聚</a></li>   
-  <li><a href="https://www.hdmoli.com/" target="_blank">hdmoil</a></li>
+  <li><a href="https://1080zyk3.com/" target="_blank">高清资源库</a></li>
   <li><a href="https://www.duboku.co/" target="_blank">独播库</a></li>      
-  <li><a href="https://www.meijutt.tv/" target="_blank">美剧天堂</a></li>
+  <li><a href="http://www.meijuniao.com" target="_blank">美剧鸟</a></li>
   <li><a href="https://lvnvl.cn" target="_blank" >美剧在线</a></li>
   <li><a href="http://www.mvcat.com"target="_blank" >电影猫</a></li>
   <li><a href="http://www.yinfans.me" target="_blank">音范丝</a></li>
@@ -123,7 +123,7 @@
   <li><a href="http://www.zzrbl.com/" target="_blank">猪猪</a></li>
   <li><a href="https://newzmz.com" target="_blank">NEW</a></li>
   <li><a href="http://gaoqing.la/" target="_blank">中国高清网</a></li>
-  <li><a href="https://www.libvio.me/" target="_blank">libvio</a></li>
+  <li><a href="https://dahuhg.net/" target="_blank">UU电影</a></li>
   <li><a href="https://www.zhenbuka.com/" target="_blank">真不卡影视</a></li>
   <li><a href="https://www.dlkoo.cc" target="_blank">大连生活网</a></li>
   <li><a href="https://wetv.vip/zh-cn/" target="_blank">wetv</a></li></br>
@@ -136,12 +136,12 @@
   <li><a href="https://www.bteye.com/" target="_blank">比特影视</a></li>
   <li><a href="https://www.qd2019.net/" target="_blank">亲豆网</a></li>
   <li><a href="https://ddrk.me/" target="_blank">低端影视</a></li>
-  <li><a href="https://www.tegouys.com/" target="_blank">特狗影视</a></li>
+  <li><a href="https://www.nfmovies.com/" target="_blank">奈菲影视</a></li>
   <li><a href="https://www.o8tv.com/" target="_blank">555电影</a></li>
   <li><a href="https://mikanani.me/" target="_blank">密柑计划</a></li><br>
-  <li><a href="https://www.tv1920.com/" target="_blank">1920tv</a></li>
+  <li><a href="http://downtv.gdwar.cn/" target="_blank">MaGeDN</a></li>
   <li><a href="http://www.pdoro.com/" target="_blank">pdoro</a></li>
-  <li><a href="https://xunlei8.cc/" target="_blank">迅雷电影天堂</a></li>
+  <li><a href="https://drive.n56u.com/s/R9F1/?path=%2F" target="_blank">子翔网盘</a></li>
   <li><a href="http://pan.feidanyl.top" target="_blank">非凡</a></li>
   <li><a href="https://alist.now.sh/" target="_blank">alist</a></li>
   <li><a href="https://www.babymy.net/" target="_blank">iasee</a></li>
@@ -157,14 +157,20 @@
   <li><a href="https://t-rex.tzfile.com/" target="_blank">霸王龙</a></li>
   <li><a href="https://susuifa.com/" target="_blank">SuSu</a></li>
   <li><a href="https://ifenpaidy.com/" target="_blank">分派电影</a></li>
-  <li><a href="http://yyds.fans/" target="_blank">凤凰电影</a></li>
-  <li><a href="http://laowang666.com.cn/" target="_blank">老汪侃剧</a></li>
+  <li><a href="https://yyds.fans/" target="_blank">凤凰电影</a></li>
   <li><a href="http://www.diandp.com/" target="_blank">电灯泡</a></li>
   <li><a href="https://www.omofun.com/" target="_blank">omofun</a></li>
   <li><a href="https://www.dmxq.fun/" target="_blank">动漫星球</a></li>
   <li><a href="https://aidi.tv/" target="_blank">爱迪影视</a></li>
   <li><a href="https://www.mudvod.tv/" target="_blank">泥巴影院</a></li>
   <li><a href="https://www.4kvm.com/" target="_blank">4k影视</a></li>
+  <li><a href="https://gmtv1.xyz/" target="_blank">剧迷tv</a></li><br>
+  <li><a href="https://tkznp.com/" target="_blank">天空影视</a></li>
+  <li><a href="https://www.hdmoli.com/" target="_blank">hdmoli</a></li>
+  <li><a href="https://dianyi.ng/" target="_blank">电影先生</a></li>
+  <li><a href="https://gaze.run/" target="_blank">注视影视</a></li>
+  <li><a href="https://dmys6.com/" target="_blank">大米影视</a></li>
+  <li><a href="https://zhuijudr.com/" target="_blank">追剧达人</a></li>
 </ol>
 <h3>聚合</h3>
 <ol>
@@ -274,7 +280,7 @@
 </ol>
  <h3>🔮</h3>
 <ol>
-  <li><a href="https://yts.mx/" target="_blank">YTS</a></li>
+  <li><a href="https://yts.am/" target="_blank">YTS</a></li>
   <li><a href="https://www.torlock.com/" target="_blank">torlock</a></li>
   <li><a href="https://katcr.co/" target="_blank">kickass</a></li>
   <li><a href="https://www.rarbgmirror.com//torrents.php" target="_blank">RARBG</a></li>
@@ -311,10 +317,8 @@
   <li><a href="https://ibit.to/" target="_blank">ibit</a></li>
   <li><a href="https://btmirror.neocities.org/" target="_blank">btmirror</a></li>
   <li><a href="https://www.mini4k.com/" target="_blank">mini4k</a></li>
-  <li><a href="https://www.torrentdia16.com/" target="_blank">tdia15</a></li>
+  <li><a href="https://www.torrentdia15.com/" target="_blank">tdia15</a></li>
   <li><a href="https://nnmclub.to/" target="_blank">NNM-Club</a></li>
-  <li><a href="http://rutracker.org/" target="_blank">rutracker</a></li>
-  <li><a href="https://byrut.org/" target="_blank">byrut</a></li>
 </ol> 
  <h3>小工具与资源</h3>
 <ol>  
@@ -355,6 +359,7 @@
   <button type="button" class="s4" color=white><a href="https://v.dsb.ink/#/" target="_blank">SOMZMZ</a></button>
   <button type="button" class="s4" color=white><a href="https://yyets.dmesg.app/" target="_blank">人人影视搬运工</a></button>
   <button type="button" class="s4" color="white"><a href="https://www.36dm.club/" target="_blank">简单动漫</a></button>
+  <button type="button" class="s4" color=white><a href="http://www.all-shared.com/" target="_blank">一起分享</a></button>
   <button type="button" class="s4" color="white"><a href="https://pan-189.tk/" target="_blank">天翼云直连</a></button>
   <button type="button" class="s4" color="white"><a href="https://pan.noki.workers.dev/" target="_blank">天翼云直连1</a></button>
 </ol>
