--- a/蜘蛛.html
+++ b/蜘蛛.html
@@ -317,6 +317,8 @@
   <li><a href="https://byrut.org/" target="_blank">byrut</a></li>
   <li><a href="https://mkvdrama.org/" target="_blank">mkvdrama</li>
   <li><a href="https://www.tooxtraloaded.com.ng/" target="_blank">tooxt</a></li>
+  <li><a href="https://www.bulltorrent.com/" target="_blank">bullbt</a></li>
+  <li><a href="http://www.1bt0.com/" target="_blank">不太灵</a></li>
 </ol> 
  <h3>小工具与资源</h3>
 <ol>  
